@@ -911,7 +911,131 @@
                 library: {
                     private_profile: "<a href='http://steamcommunity.com/my/edit/settings'>Чтобы использовать эту функцию, вы должны сделать свой профиль открытым для всех</a>."
                 }
-            }
+			},	
+			"sc":  {
+				empty_wishlist: "清空愿望单",
+				purchase_date: "(于__date__购买)",
+				options: "选项",
+				website: "访问网站",
+				contribute: "贡献 (GitHub)",
+				official_group: "官方群组",
+				official_group_url: "steamcommunity.com/groups/enhancedsteam",
+				store: "商店",
+				library_menu: "库",
+				community: "社区",
+				news: "新闻",
+				about: "关于",
+				donate: "捐赠",
+				language: "语言",
+				highlight: "高亮显示",
+				options_owned: "您拥有的物品",
+				options_wishlist: "您愿望单中的物品",
+				options_coupon: "可使用优惠券的物品",
+				options_gift: "库存中含有礼物的物品",
+				options_guest: "您拥有玩家通行证的物品",
+				options_friends_wishlist: "您好友愿望单中的物品",
+				options_excludef2p: "免费游戏不高亮显示",
+				options_friends_own: "您好友拥有的物品",
+				options_friends_rec: "您好友推荐的物品",
+				options_hide_early_access: "新发布的早期试玩物品",
+				options_hide_install: "隐藏安装Steam按钮",
+				options_send_age_info: "根据需要自动发送年龄认证",
+				options_contscroll: "启用连续滚动显示搜索结果",
+				options_drm: "显示第三方数字版权警告",
+				options_lowestprice: "显示历史价格信息",
+				options_metacritic: "显示Metacritic用户评分",
+				options_hltb: "显示HowLongToBeat.com信息",
+				options_steamdb: "显示SteamDB链接",
+				options_wsgf: "显示WSGF信息",
+				options_carousel_description: "在商店首页显示简介",
+				options_profile_links: "显示以下网站的资料链接",
+				options_total_spent: "在账户页面显示总消费",
+				options_group_events: "在群组预览中显示活动",
+				options_greenlight_banner: "替换 Steam Greenlight 横幅",
+				options_hideactivelistings: "默认隐藏市场中我的活动列表",
+				options_steamcardexchange: "在徽章上显示Steam交易卡链接",
+				options_es_bg: "在编辑用户资料界面设置自定义背景",
+				options_showallachievements: "在全部游戏页面展示成就数据",
+				options_market_total: "展示市场交易总额",
+				options_library: "在顶部显示库按钮",
+				options_library_f2p: "展示库存中玩过的免费游戏及试玩游戏",
+				options_hide_about: "隐藏“关于”链接",
+				options_hide_new_heading: "隐藏用户名旁的NEW",
+				options_replace_account_name: "用昵称替代用户名",
+				options_show_regionwarning: "跨区浏览时显示警告",
+				tag: "标签",
+				theworddefault: "默认",
+				save: "保存",
+				saved: "已保存",
+				remove: "移除",
+				view_in: "查看",
+				clear_cache: "清除缓存数据",
+				forums: "论坛",
+				games: "游戏",
+				compare: "比较",
+				coupon_available: "您可以使用优惠券！",
+				coupon_application_note: "结账时自动使用库存中的优惠券",
+				coupon_learn_more: "<a href=\"https://support.steampowered.com/kb_article.php?ref=4210-YIPC-0275\">了解更多</a>Steam优惠券信息",
+				add_to_cart: "添加至购物车",
+				add_unowned_dlc_to_cart: "将尚未拥有的DLC添加至购物车",
+				drm_third_party: "警告：本作使用第三方数字版权验证",
+				empty_cart: "清空购物车",
+				events_view_all: "查看全部",
+				dlc_data_header: "可下载拓展详情",
+				tag_owned: "已拥有",
+				tag_wishlist: "愿望单",
+				tag_coupon: "优惠券",
+				tag_inv_gift: "礼物",
+				tag_inv_guestpass: "玩家通行证",
+				tag_friends_want: "<a href=\"http://steamcommunity.com/my/friendsthatplay/__appid__\">__friendcount__想要</a>",
+				tag_friends_own: "__friendcount__拥有",
+				tag_friends_rec: "<a href=\"http://store.steampowered.com/recommended/byfriends/__appid__\"> __friendcount__推荐",
+				inventory_market_text: "在物品栏中显示市场价格",
+				credits: "工作人员",
+				stores: "Stores",
+				all: "全部",
+				programming: "程序员",
+				translation: "翻译",
+				custom_background: "自定义背景",
+				custom_background_help: "所有Enhanced Steam用户将看到您的自定义背景，非Enhanced Steam用户将看到常规背景",
+				total_size: "占用空间",
+				hide: "隐藏",
+				show: "显示",
+				view: "查看",
+				buy: "购买",
+				store_transactions: "商店交易",
+				game_transactions: "游戏交易",
+				market_transactions: "市场交易",
+				total_spent: "总消费",
+				historical_low: "历史最低价",
+				lowest_price: "最低价格",
+				card_drops_remaining: "__drops__张卡片可掉落",
+				games_with_drops: "__dropsgames__个游戏可掉落卡片",
+				games_with_booster: "__boostergames__个游戏可获得拓展包",
+				badges_all: "全部徽章",
+				games_all: "全部游戏",
+				games_discount: "优惠游戏",
+				badges_drops: "仍可获得卡片的徽章",
+				binder_view: "活页夹视图",
+				sales_total: "出售总计",
+				purchase_total: "消费总计",
+				net_gain: "净收益",
+				net_spent: "净消费",
+				loading: "载入中...",
+				using_store: "您正在__current__地区使用Steam商店",
+				using_store_return: "点击返回__base__商店",
+				library: {
+					private_profile: "<a href='http://steamcommunity.com/my/edit/settings'>在设置中将您的资料状态更改为公开以使用此功能</a>"
+				},
+				bundle: {
+					info: "游戏包信息",
+					offer_ends: "促销结束",
+					pwyw: "自由定价",
+					includes: "包含(__num__)件物品",
+					header: "包含该游戏的游戏包",
+					bundle_count: "该游戏出现在游戏包中的次数"
+				}
+			}
         };
 
         // Set english defaults.
