@@ -55,7 +55,7 @@
 						<option value="sv">Svenska</option>
 						<option value="th">ภาษาไทย</option>
 						<option value="tr">Türkçe</option>
-						<option value="zh-hans">中文(简体)‬</option>
+						<option value="sc">中文(简体)‬</option>
 						<option value="zh-hant">中文(繁體)</option>
 					</select>
 				</td>
@@ -882,6 +882,17 @@
 				</td>
 				<td>
 					<div class="text">Johnywalves</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					&nbsp;&nbsp;
+				</td>
+				<td height=30>
+					<div class="text">Chinese</div>
+				</td>
+				<td>
+					<div class="text">Bin Dong</div>
 				</td>
 			</tr>
 		
